fixed up the banner/landing image. Gonna take a small break the continue

--- a/Styles/index.css
+++ b/Styles/index.css
@@ -104,6 +104,7 @@ header nav a {
     background-image: url("../Assets/Field\ of\ Weed.jpg");
     background-repeat: no-repeat;
     background-position: center;
+    background-size: cover;
     height: 50vh;
 }
 
